// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`intl-watcher plugin > error handling > unsupported expression 1`] = `
"{
	"unusedRootNamespace": {
		"unusedNestedNamespace": {
			"unusedNestedVariable": ""
		},
		"unusedRootVariable": ""
	},
	"unusedVariable": "No longer referenced in any source file"
}
"
`;

exports[`intl-watcher plugin > error handling > unsupported expression 2`] = `
"[37m[1m○[22m[39m Scanning...
[33m[1m⚠[22m[39m src/app/fixtures/unsupported-expression.tsx:10:4 ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

[33m[1m⚠[22m[39m [33mUnsupported expression of kind ConditionalExpression detected.[39m

10 | t(randomBoolean() ? 'one' : 'two')
|   [31m^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^[39m

[32m[1mℹ[22m[39m [32mThis syntax is not currently supported. If you need support for it, please open a feature request
detailing the syntax kind and the entire expression. Submit your request here:
https://github.com/ChristianIvicevic/intl-watcher/issues/new?template=03-feature.yml[39m

[33m[1m⚠[22m[39m src/app/fixtures/unsupported-expression.tsx:12:4 ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

[33m[1m⚠[22m[39m [33mUnsupported expression of kind CallExpression detected.[39m

12 | t(randomFruit())
|   [31m^^^^^^^^^^^^^[39m

[32m[1mℹ[22m[39m [32mThis syntax is not currently supported. If you need support for it, please open a feature request
detailing the syntax kind and the entire expression. Submit your request here:
https://github.com/ChristianIvicevic/intl-watcher/issues/new?template=03-feature.yml[39m

[33m[1m⚠[22m[39m Unused i18n key \`unusedRootNamespace.unusedNestedNamespace.unusedNestedVariable\`
[33m[1m⚠[22m[39m Unused i18n key \`unusedRootNamespace.unusedRootVariable\`
[33m[1m⚠[22m[39m Unused i18n key \`unusedVariable\`
[34m[1m✓[22m[39m Finished in <timing>"
`;

exports[`intl-watcher plugin > flat dictionaries > edge cases > server-side options 1`] = `
"{
	"newServerVariable": "[NYT: newServerVariable]",
	"unusedRootNamespace": {
		"unusedNestedNamespace": {
			"unusedNestedVariable": ""
		},
		"unusedRootVariable": ""
	},
	"unusedVariable": "No longer referenced in any source file"
}
"
`;

exports[`intl-watcher plugin > flat dictionaries > edge cases > server-side options 2`] = `
"[37m[1m○[22m[39m Scanning...
[33m[1m⚠[22m[39m Unused i18n key \`unusedRootNamespace.unusedNestedNamespace.unusedNestedVariable\`
[33m[1m⚠[22m[39m Unused i18n key \`unusedRootNamespace.unusedRootVariable\`
[33m[1m⚠[22m[39m Unused i18n key \`unusedVariable\`
[34m[1m✓[22m[39m Added new i18n key \`newServerVariable\`
[34m[1m✓[22m[39m Finished in <timing>"
`;

exports[`intl-watcher plugin > flat dictionaries > multiple languages > default options 1`] = `
"{
	"apple": "[NYT: apple]",
	"appleDescription": "[NYT: appleDescription]",
	"banana": "[NYT: banana]",
	"bananaDescription": "[NYT: bananaDescription]",
	"literal": "[NYT: literal]",
	"newClientVariable": "[NYT: newClientVariable]",
	"newServerVariable": "[NYT: newServerVariable]",
	"orange": "[NYT: orange]",
	"orangeDescription": "[NYT: orangeDescription]",
	"richText": "[NYT: richText]",
	"unusedRootNamespace": {
		"unusedNestedNamespace": {
			"unusedNestedVariable": ""
		},
		"unusedRootVariable": ""
	},
	"unusedVariable": "No longer referenced in any source file"
}
"
`;

exports[`intl-watcher plugin > flat dictionaries > multiple languages > default options 2`] = `
"{
	"apple": "[NYT: apple]",
	"appleDescription": "[NYT: appleDescription]",
	"banana": "[NYT: banana]",
	"bananaDescription": "[NYT: bananaDescription]",
	"literal": "[NYT: literal]",
	"newClientVariable": "[NYT: newClientVariable]",
	"newServerVariable": "[NYT: newServerVariable]",
	"orange": "[NYT: orange]",
	"orangeDescription": "[NYT: orangeDescription]",
	"richText": "[NYT: richText]",
	"unusedRootNamespace": {
		"unusedNestedNamespace": {
			"unusedNestedVariable": ""
		},
		"unusedRootVariable": ""
	},
	"unusedVariable": "In keiner Datei mehr genutzt"
}
"
`;

exports[`intl-watcher plugin > flat dictionaries > multiple languages > default options 3`] = `
"[37m[1m○[22m[39m Scanning...
[33m[1m⚠[22m[39m Unused i18n key \`unusedRootNamespace.unusedNestedNamespace.unusedNestedVariable\`
[33m[1m⚠[22m[39m Unused i18n key \`unusedRootNamespace.unusedRootVariable\`
[33m[1m⚠[22m[39m Unused i18n key \`unusedVariable\`
[34m[1m✓[22m[39m Added new i18n key \`newClientVariable\`
[34m[1m✓[22m[39m Added new i18n key \`apple\`
[34m[1m✓[22m[39m Added new i18n key \`appleDescription\`
[34m[1m✓[22m[39m Added new i18n key \`banana\`
[34m[1m✓[22m[39m Added new i18n key \`bananaDescription\`
[34m[1m✓[22m[39m Added new i18n key \`literal\`
[34m[1m✓[22m[39m Added new i18n key \`newServerVariable\`
[34m[1m✓[22m[39m Added new i18n key \`orange\`
[34m[1m✓[22m[39m Added new i18n key \`orangeDescription\`
[34m[1m✓[22m[39m Added new i18n key \`richText\`
[34m[1m✓[22m[39m Finished in <timing>"
`;

exports[`intl-watcher plugin > flat dictionaries > multiple languages > dictionary partitioning 1`] = `
"{
	"apple": "[NYT: apple]",
	"appleDescription": "[NYT: appleDescription]",
	"banana": "[NYT: banana]",
	"bananaDescription": "[NYT: bananaDescription]",
	"literal": "[NYT: literal]",
	"newClientVariable": "[NYT: newClientVariable]",
	"newServerVariable": "[NYT: newServerVariable]",
	"orange": "[NYT: orange]",
	"orangeDescription": "[NYT: orangeDescription]",
	"richText": "[NYT: richText]",
	"unusedRootNamespace": {
		"unusedNestedNamespace": {
			"unusedNestedVariable": ""
		},
		"unusedRootVariable": ""
	},
	"unusedVariable": "No longer referenced in any source file"
}
"
`;

exports[`intl-watcher plugin > flat dictionaries > multiple languages > dictionary partitioning 2`] = `
"{
	"apple": "[NYT: apple]",
	"appleDescription": "[NYT: appleDescription]",
	"banana": "[NYT: banana]",
	"bananaDescription": "[NYT: bananaDescription]",
	"literal": "[NYT: literal]",
	"newClientVariable": "[NYT: newClientVariable]",
	"newServerVariable": "[NYT: newServerVariable]",
	"orange": "[NYT: orange]",
	"orangeDescription": "[NYT: orangeDescription]",
	"richText": "[NYT: richText]",
	"unusedRootNamespace": {
		"unusedNestedNamespace": {
			"unusedNestedVariable": ""
		},
		"unusedRootVariable": ""
	},
	"unusedVariable": "In keiner Datei mehr genutzt"
}
"
`;

exports[`intl-watcher plugin > flat dictionaries > multiple languages > dictionary partitioning 3`] = `
"{
	"newClientVariable": "[NYT: newClientVariable]"
}
"
`;

exports[`intl-watcher plugin > flat dictionaries > multiple languages > dictionary partitioning 4`] = `
"{
	"apple": "[NYT: apple]",
	"appleDescription": "[NYT: appleDescription]",
	"banana": "[NYT: banana]",
	"bananaDescription": "[NYT: bananaDescription]",
	"literal": "[NYT: literal]",
	"newServerVariable": "[NYT: newServerVariable]",
	"orange": "[NYT: orange]",
	"orangeDescription": "[NYT: orangeDescription]",
	"richText": "[NYT: richText]"
}
"
`;

exports[`intl-watcher plugin > flat dictionaries > multiple languages > dictionary partitioning 5`] = `
"{
	"newClientVariable": "[NYT: newClientVariable]"
}
"
`;

exports[`intl-watcher plugin > flat dictionaries > multiple languages > dictionary partitioning 6`] = `
"{
	"apple": "[NYT: apple]",
	"appleDescription": "[NYT: appleDescription]",
	"banana": "[NYT: banana]",
	"bananaDescription": "[NYT: bananaDescription]",
	"literal": "[NYT: literal]",
	"newServerVariable": "[NYT: newServerVariable]",
	"orange": "[NYT: orange]",
	"orangeDescription": "[NYT: orangeDescription]",
	"richText": "[NYT: richText]"
}
"
`;

exports[`intl-watcher plugin > flat dictionaries > multiple languages > dictionary partitioning 7`] = `
"[37m[1m○[22m[39m Scanning...
[33m[1m⚠[22m[39m Unused i18n key \`unusedRootNamespace.unusedNestedNamespace.unusedNestedVariable\`
[33m[1m⚠[22m[39m Unused i18n key \`unusedRootNamespace.unusedRootVariable\`
[33m[1m⚠[22m[39m Unused i18n key \`unusedVariable\`
[34m[1m✓[22m[39m Added new i18n key \`newClientVariable\`
[34m[1m✓[22m[39m Added new i18n key \`apple\`
[34m[1m✓[22m[39m Added new i18n key \`appleDescription\`
[34m[1m✓[22m[39m Added new i18n key \`banana\`
[34m[1m✓[22m[39m Added new i18n key \`bananaDescription\`
[34m[1m✓[22m[39m Added new i18n key \`literal\`
[34m[1m✓[22m[39m Added new i18n key \`newServerVariable\`
[34m[1m✓[22m[39m Added new i18n key \`orange\`
[34m[1m✓[22m[39m Added new i18n key \`orangeDescription\`
[34m[1m✓[22m[39m Added new i18n key \`richText\`
[34m[1m✓[22m[39m Finished in <timing>"
`;

exports[`intl-watcher plugin > flat dictionaries > single language > custom fallback for new keys 1`] = `
"{
	"apple": "[Missing translation: apple]",
	"appleDescription": "[Missing translation: appleDescription]",
	"banana": "[Missing translation: banana]",
	"bananaDescription": "[Missing translation: bananaDescription]",
	"literal": "[Missing translation: literal]",
	"newClientVariable": "[Missing translation: newClientVariable]",
	"newServerVariable": "[Missing translation: newServerVariable]",
	"orange": "[Missing translation: orange]",
	"orangeDescription": "[Missing translation: orangeDescription]",
	"richText": "[Missing translation: richText]",
	"unusedRootNamespace": {
		"unusedNestedNamespace": {
			"unusedNestedVariable": ""
		},
		"unusedRootVariable": ""
	},
	"unusedVariable": "No longer referenced in any source file"
}
"
`;

exports[`intl-watcher plugin > flat dictionaries > single language > custom fallback for new keys 2`] = `
"[37m[1m○[22m[39m Scanning...
[33m[1m⚠[22m[39m Unused i18n key \`unusedRootNamespace.unusedNestedNamespace.unusedNestedVariable\`
[33m[1m⚠[22m[39m Unused i18n key \`unusedRootNamespace.unusedRootVariable\`
[33m[1m⚠[22m[39m Unused i18n key \`unusedVariable\`
[34m[1m✓[22m[39m Added new i18n key \`newClientVariable\`
[34m[1m✓[22m[39m Added new i18n key \`apple\`
[34m[1m✓[22m[39m Added new i18n key \`appleDescription\`
[34m[1m✓[22m[39m Added new i18n key \`banana\`
[34m[1m✓[22m[39m Added new i18n key \`bananaDescription\`
[34m[1m✓[22m[39m Added new i18n key \`literal\`
[34m[1m✓[22m[39m Added new i18n key \`newServerVariable\`
[34m[1m✓[22m[39m Added new i18n key \`orange\`
[34m[1m✓[22m[39m Added new i18n key \`orangeDescription\`
[34m[1m✓[22m[39m Added new i18n key \`richText\`
[34m[1m✓[22m[39m Finished in <timing>"
`;

exports[`intl-watcher plugin > flat dictionaries > single language > custom partitioning function names 1`] = `
"{
	"customApple": "[NYT: customApple]",
	"customAppleDescription": "[NYT: customAppleDescription]",
	"customBanana": "[NYT: customBanana]",
	"customBananaDescription": "[NYT: customBananaDescription]",
	"customOrange": "[NYT: customOrange]",
	"customOrangeDescription": "[NYT: customOrangeDescription]",
	"newCustomClientVariable": "[NYT: newCustomClientVariable]",
	"newCustomServerVariable": "[NYT: newCustomServerVariable]",
	"unusedRootNamespace": {
		"unusedNestedNamespace": {
			"unusedNestedVariable": ""
		},
		"unusedRootVariable": ""
	},
	"unusedVariable": "No longer referenced in any source file"
}
"
`;

exports[`intl-watcher plugin > flat dictionaries > single language > custom partitioning function names 2`] = `
"{
	"newCustomClientVariable": "[NYT: newCustomClientVariable]"
}
"
`;

exports[`intl-watcher plugin > flat dictionaries > single language > custom partitioning function names 3`] = `
"{
	"customApple": "[NYT: customApple]",
	"customAppleDescription": "[NYT: customAppleDescription]",
	"customBanana": "[NYT: customBanana]",
	"customBananaDescription": "[NYT: customBananaDescription]",
	"customOrange": "[NYT: customOrange]",
	"customOrangeDescription": "[NYT: customOrangeDescription]",
	"newCustomServerVariable": "[NYT: newCustomServerVariable]"
}
"
`;

exports[`intl-watcher plugin > flat dictionaries > single language > custom partitioning function names 4`] = `
"[37m[1m○[22m[39m Scanning...
[33m[1m⚠[22m[39m Unused i18n key \`unusedRootNamespace.unusedNestedNamespace.unusedNestedVariable\`
[33m[1m⚠[22m[39m Unused i18n key \`unusedRootNamespace.unusedRootVariable\`
[33m[1m⚠[22m[39m Unused i18n key \`unusedVariable\`
[34m[1m✓[22m[39m Added new i18n key \`newCustomClientVariable\`
[34m[1m✓[22m[39m Added new i18n key \`customApple\`
[34m[1m✓[22m[39m Added new i18n key \`customAppleDescription\`
[34m[1m✓[22m[39m Added new i18n key \`customBanana\`
[34m[1m✓[22m[39m Added new i18n key \`customBananaDescription\`
[34m[1m✓[22m[39m Added new i18n key \`customOrange\`
[34m[1m✓[22m[39m Added new i18n key \`customOrangeDescription\`
[34m[1m✓[22m[39m Added new i18n key \`newCustomServerVariable\`
[34m[1m✓[22m[39m Finished in <timing>"
`;

exports[`intl-watcher plugin > flat dictionaries > single language > default options 1`] = `
"{
	"apple": "[NYT: apple]",
	"appleDescription": "[NYT: appleDescription]",
	"banana": "[NYT: banana]",
	"bananaDescription": "[NYT: bananaDescription]",
	"literal": "[NYT: literal]",
	"newClientVariable": "[NYT: newClientVariable]",
	"newServerVariable": "[NYT: newServerVariable]",
	"orange": "[NYT: orange]",
	"orangeDescription": "[NYT: orangeDescription]",
	"richText": "[NYT: richText]",
	"unusedRootNamespace": {
		"unusedNestedNamespace": {
			"unusedNestedVariable": ""
		},
		"unusedRootVariable": ""
	},
	"unusedVariable": "No longer referenced in any source file"
}
"
`;

exports[`intl-watcher plugin > flat dictionaries > single language > default options 2`] = `
"[37m[1m○[22m[39m Scanning...
[33m[1m⚠[22m[39m Unused i18n key \`unusedRootNamespace.unusedNestedNamespace.unusedNestedVariable\`
[33m[1m⚠[22m[39m Unused i18n key \`unusedRootNamespace.unusedRootVariable\`
[33m[1m⚠[22m[39m Unused i18n key \`unusedVariable\`
[34m[1m✓[22m[39m Added new i18n key \`newClientVariable\`
[34m[1m✓[22m[39m Added new i18n key \`apple\`
[34m[1m✓[22m[39m Added new i18n key \`appleDescription\`
[34m[1m✓[22m[39m Added new i18n key \`banana\`
[34m[1m✓[22m[39m Added new i18n key \`bananaDescription\`
[34m[1m✓[22m[39m Added new i18n key \`literal\`
[34m[1m✓[22m[39m Added new i18n key \`newServerVariable\`
[34m[1m✓[22m[39m Added new i18n key \`orange\`
[34m[1m✓[22m[39m Added new i18n key \`orangeDescription\`
[34m[1m✓[22m[39m Added new i18n key \`richText\`
[34m[1m✓[22m[39m Finished in <timing>"
`;

exports[`intl-watcher plugin > flat dictionaries > single language > dictionary partitioning 1`] = `
"{
	"apple": "[NYT: apple]",
	"appleDescription": "[NYT: appleDescription]",
	"banana": "[NYT: banana]",
	"bananaDescription": "[NYT: bananaDescription]",
	"literal": "[NYT: literal]",
	"newClientVariable": "[NYT: newClientVariable]",
	"newServerVariable": "[NYT: newServerVariable]",
	"orange": "[NYT: orange]",
	"orangeDescription": "[NYT: orangeDescription]",
	"richText": "[NYT: richText]",
	"unusedRootNamespace": {
		"unusedNestedNamespace": {
			"unusedNestedVariable": ""
		},
		"unusedRootVariable": ""
	},
	"unusedVariable": "No longer referenced in any source file"
}
"
`;

exports[`intl-watcher plugin > flat dictionaries > single language > dictionary partitioning 2`] = `
"{
	"newClientVariable": "[NYT: newClientVariable]"
}
"
`;

exports[`intl-watcher plugin > flat dictionaries > single language > dictionary partitioning 3`] = `
"{
	"apple": "[NYT: apple]",
	"appleDescription": "[NYT: appleDescription]",
	"banana": "[NYT: banana]",
	"bananaDescription": "[NYT: bananaDescription]",
	"literal": "[NYT: literal]",
	"newServerVariable": "[NYT: newServerVariable]",
	"orange": "[NYT: orange]",
	"orangeDescription": "[NYT: orangeDescription]",
	"richText": "[NYT: richText]"
}
"
`;

exports[`intl-watcher plugin > flat dictionaries > single language > dictionary partitioning 4`] = `
"[37m[1m○[22m[39m Scanning...
[33m[1m⚠[22m[39m Unused i18n key \`unusedRootNamespace.unusedNestedNamespace.unusedNestedVariable\`
[33m[1m⚠[22m[39m Unused i18n key \`unusedRootNamespace.unusedRootVariable\`
[33m[1m⚠[22m[39m Unused i18n key \`unusedVariable\`
[34m[1m✓[22m[39m Added new i18n key \`newClientVariable\`
[34m[1m✓[22m[39m Added new i18n key \`apple\`
[34m[1m✓[22m[39m Added new i18n key \`appleDescription\`
[34m[1m✓[22m[39m Added new i18n key \`banana\`
[34m[1m✓[22m[39m Added new i18n key \`bananaDescription\`
[34m[1m✓[22m[39m Added new i18n key \`literal\`
[34m[1m✓[22m[39m Added new i18n key \`newServerVariable\`
[34m[1m✓[22m[39m Added new i18n key \`orange\`
[34m[1m✓[22m[39m Added new i18n key \`orangeDescription\`
[34m[1m✓[22m[39m Added new i18n key \`richText\`
[34m[1m✓[22m[39m Finished in <timing>"
`;

exports[`intl-watcher plugin > flat dictionaries > single language > unused key removal 1`] = `
"{
	"apple": "[NYT: apple]",
	"appleDescription": "[NYT: appleDescription]",
	"banana": "[NYT: banana]",
	"bananaDescription": "[NYT: bananaDescription]",
	"literal": "[NYT: literal]",
	"newClientVariable": "[NYT: newClientVariable]",
	"newServerVariable": "[NYT: newServerVariable]",
	"orange": "[NYT: orange]",
	"orangeDescription": "[NYT: orangeDescription]",
	"richText": "[NYT: richText]"
}
"
`;

exports[`intl-watcher plugin > flat dictionaries > single language > unused key removal 2`] = `
"[37m[1m○[22m[39m Scanning...
[34m[1m✓[22m[39m Removed unused i18n key \`unusedRootNamespace.unusedNestedNamespace.unusedNestedVariable\`
[34m[1m✓[22m[39m Removed unused i18n key \`unusedRootNamespace.unusedRootVariable\`
[34m[1m✓[22m[39m Removed unused i18n key \`unusedVariable\`
[34m[1m✓[22m[39m Added new i18n key \`newClientVariable\`
[34m[1m✓[22m[39m Added new i18n key \`apple\`
[34m[1m✓[22m[39m Added new i18n key \`appleDescription\`
[34m[1m✓[22m[39m Added new i18n key \`banana\`
[34m[1m✓[22m[39m Added new i18n key \`bananaDescription\`
[34m[1m✓[22m[39m Added new i18n key \`literal\`
[34m[1m✓[22m[39m Added new i18n key \`newServerVariable\`
[34m[1m✓[22m[39m Added new i18n key \`orange\`
[34m[1m✓[22m[39m Added new i18n key \`orangeDescription\`
[34m[1m✓[22m[39m Added new i18n key \`richText\`
[34m[1m✓[22m[39m Finished in <timing>"
`;

exports[`intl-watcher plugin > namespaced dictionaries > edge cases > server-side options 1`] = `
"{
	"rootNamespace": {
		"nestedNamespace": {
			"newServerVariable": "[NYT: rootNamespace.nestedNamespace.newServerVariable]"
		}
	},
	"unusedRootNamespace": {
		"unusedNestedNamespace": {
			"unusedNestedVariable": ""
		},
		"unusedRootVariable": ""
	},
	"unusedVariable": "No longer referenced in any source file"
}
"
`;

exports[`intl-watcher plugin > namespaced dictionaries > edge cases > server-side options 2`] = `
"[37m[1m○[22m[39m Scanning...
[33m[1m⚠[22m[39m Unused i18n key \`unusedRootNamespace.unusedNestedNamespace.unusedNestedVariable\`
[33m[1m⚠[22m[39m Unused i18n key \`unusedRootNamespace.unusedRootVariable\`
[33m[1m⚠[22m[39m Unused i18n key \`unusedVariable\`
[34m[1m✓[22m[39m Added new i18n key \`rootNamespace.nestedNamespace.newServerVariable\`
[34m[1m✓[22m[39m Finished in <timing>"
`;

exports[`intl-watcher plugin > namespaced dictionaries > error handling > dynamic namespace 1`] = `
"{
	"unusedRootNamespace": {
		"unusedNestedNamespace": {
			"unusedNestedVariable": ""
		},
		"unusedRootVariable": ""
	},
	"unusedVariable": "No longer referenced in any source file"
}
"
`;

exports[`intl-watcher plugin > namespaced dictionaries > error handling > dynamic namespace 2`] = `
"[37m[1m○[22m[39m Scanning...
[31m[1m⨯[22m[39m src/app/fixtures/dynamic-namespaces.tsx:9:34 ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

[31m[1m⨯[22m[39m [31mA dynamic namespace value was provided instead of a literal string.[39m

9 | const t = await getTranslations(getRandomNamespace())
|                                 [31m^^^^^^^^^^^^^^^^^^^^[39m

[32m[1mℹ[22m[39m [32mFor reliable extraction of translation keys, please ensure that the namespace is defined
as a static string literal (or a variable that unequivocally resolves to one).[39m

[33m[1m⚠[22m[39m Unused i18n key \`unusedRootNamespace.unusedNestedNamespace.unusedNestedVariable\`
[33m[1m⚠[22m[39m Unused i18n key \`unusedRootNamespace.unusedRootVariable\`
[33m[1m⚠[22m[39m Unused i18n key \`unusedVariable\`
[34m[1m✓[22m[39m Finished in <timing>"
`;

exports[`intl-watcher plugin > namespaced dictionaries > multiple languages > default options 1`] = `
"{
	"rootNamespace": {
		"nestedNamespace": {
			"newClientVariable": "[NYT: rootNamespace.nestedNamespace.newClientVariable]",
			"newServerVariable": "[NYT: rootNamespace.nestedNamespace.newServerVariable]"
		}
	},
	"unusedRootNamespace": {
		"unusedNestedNamespace": {
			"unusedNestedVariable": ""
		},
		"unusedRootVariable": ""
	},
	"unusedVariable": "No longer referenced in any source file"
}
"
`;

exports[`intl-watcher plugin > namespaced dictionaries > multiple languages > default options 2`] = `
"{
	"rootNamespace": {
		"nestedNamespace": {
			"newClientVariable": "[NYT: rootNamespace.nestedNamespace.newClientVariable]",
			"newServerVariable": "[NYT: rootNamespace.nestedNamespace.newServerVariable]"
		}
	},
	"unusedRootNamespace": {
		"unusedNestedNamespace": {
			"unusedNestedVariable": ""
		},
		"unusedRootVariable": ""
	},
	"unusedVariable": "In keiner Datei mehr genutzt"
}
"
`;

exports[`intl-watcher plugin > namespaced dictionaries > multiple languages > default options 3`] = `
"[37m[1m○[22m[39m Scanning...
[33m[1m⚠[22m[39m Unused i18n key \`unusedRootNamespace.unusedNestedNamespace.unusedNestedVariable\`
[33m[1m⚠[22m[39m Unused i18n key \`unusedRootNamespace.unusedRootVariable\`
[33m[1m⚠[22m[39m Unused i18n key \`unusedVariable\`
[34m[1m✓[22m[39m Added new i18n key \`rootNamespace.nestedNamespace.newClientVariable\`
[34m[1m✓[22m[39m Added new i18n key \`rootNamespace.nestedNamespace.newServerVariable\`
[34m[1m✓[22m[39m Finished in <timing>"
`;

exports[`intl-watcher plugin > namespaced dictionaries > multiple languages > dictionary partitioning 1`] = `
"{
	"rootNamespace": {
		"nestedNamespace": {
			"newClientVariable": "[NYT: rootNamespace.nestedNamespace.newClientVariable]",
			"newServerVariable": "[NYT: rootNamespace.nestedNamespace.newServerVariable]"
		}
	},
	"unusedRootNamespace": {
		"unusedNestedNamespace": {
			"unusedNestedVariable": ""
		},
		"unusedRootVariable": ""
	},
	"unusedVariable": "No longer referenced in any source file"
}
"
`;

exports[`intl-watcher plugin > namespaced dictionaries > multiple languages > dictionary partitioning 2`] = `
"{
	"rootNamespace": {
		"nestedNamespace": {
			"newClientVariable": "[NYT: rootNamespace.nestedNamespace.newClientVariable]",
			"newServerVariable": "[NYT: rootNamespace.nestedNamespace.newServerVariable]"
		}
	},
	"unusedRootNamespace": {
		"unusedNestedNamespace": {
			"unusedNestedVariable": ""
		},
		"unusedRootVariable": ""
	},
	"unusedVariable": "In keiner Datei mehr genutzt"
}
"
`;

exports[`intl-watcher plugin > namespaced dictionaries > multiple languages > dictionary partitioning 3`] = `
"{
	"rootNamespace": {
		"nestedNamespace": {
			"newClientVariable": "[NYT: rootNamespace.nestedNamespace.newClientVariable]"
		}
	}
}
"
`;

exports[`intl-watcher plugin > namespaced dictionaries > multiple languages > dictionary partitioning 4`] = `
"{
	"rootNamespace": {
		"nestedNamespace": {
			"newServerVariable": "[NYT: rootNamespace.nestedNamespace.newServerVariable]"
		}
	}
}
"
`;

exports[`intl-watcher plugin > namespaced dictionaries > multiple languages > dictionary partitioning 5`] = `
"{
	"rootNamespace": {
		"nestedNamespace": {
			"newClientVariable": "[NYT: rootNamespace.nestedNamespace.newClientVariable]"
		}
	}
}
"
`;

exports[`intl-watcher plugin > namespaced dictionaries > multiple languages > dictionary partitioning 6`] = `
"{
	"rootNamespace": {
		"nestedNamespace": {
			"newServerVariable": "[NYT: rootNamespace.nestedNamespace.newServerVariable]"
		}
	}
}
"
`;

exports[`intl-watcher plugin > namespaced dictionaries > multiple languages > dictionary partitioning 7`] = `
"[37m[1m○[22m[39m Scanning...
[33m[1m⚠[22m[39m Unused i18n key \`unusedRootNamespace.unusedNestedNamespace.unusedNestedVariable\`
[33m[1m⚠[22m[39m Unused i18n key \`unusedRootNamespace.unusedRootVariable\`
[33m[1m⚠[22m[39m Unused i18n key \`unusedVariable\`
[34m[1m✓[22m[39m Added new i18n key \`rootNamespace.nestedNamespace.newClientVariable\`
[34m[1m✓[22m[39m Added new i18n key \`rootNamespace.nestedNamespace.newServerVariable\`
[34m[1m✓[22m[39m Finished in <timing>"
`;

exports[`intl-watcher plugin > namespaced dictionaries > single language > custom fallback for new keys 1`] = `
"{
	"rootNamespace": {
		"nestedNamespace": {
			"newClientVariable": "[Missing translation: rootNamespace.nestedNamespace.newClientVariable]",
			"newServerVariable": "[Missing translation: rootNamespace.nestedNamespace.newServerVariable]"
		}
	},
	"unusedRootNamespace": {
		"unusedNestedNamespace": {
			"unusedNestedVariable": ""
		},
		"unusedRootVariable": ""
	},
	"unusedVariable": "No longer referenced in any source file"
}
"
`;

exports[`intl-watcher plugin > namespaced dictionaries > single language > custom fallback for new keys 2`] = `
"[37m[1m○[22m[39m Scanning...
[33m[1m⚠[22m[39m Unused i18n key \`unusedRootNamespace.unusedNestedNamespace.unusedNestedVariable\`
[33m[1m⚠[22m[39m Unused i18n key \`unusedRootNamespace.unusedRootVariable\`
[33m[1m⚠[22m[39m Unused i18n key \`unusedVariable\`
[34m[1m✓[22m[39m Added new i18n key \`rootNamespace.nestedNamespace.newClientVariable\`
[34m[1m✓[22m[39m Added new i18n key \`rootNamespace.nestedNamespace.newServerVariable\`
[34m[1m✓[22m[39m Finished in <timing>"
`;

exports[`intl-watcher plugin > namespaced dictionaries > single language > custom partitioning function names 1`] = `
"{
	"rootNamespace": {
		"nestedNamespace": {
			"newClientVariable": "[NYT: rootNamespace.nestedNamespace.newClientVariable]",
			"newServerVariable": "[NYT: rootNamespace.nestedNamespace.newServerVariable]"
		}
	},
	"unusedRootNamespace": {
		"unusedNestedNamespace": {
			"unusedNestedVariable": ""
		},
		"unusedRootVariable": ""
	},
	"unusedVariable": "No longer referenced in any source file"
}
"
`;

exports[`intl-watcher plugin > namespaced dictionaries > single language > custom partitioning function names 2`] = `
"{
	"rootNamespace": {
		"nestedNamespace": {
			"newClientVariable": "[NYT: rootNamespace.nestedNamespace.newClientVariable]"
		}
	}
}
"
`;

exports[`intl-watcher plugin > namespaced dictionaries > single language > custom partitioning function names 3`] = `
"{
	"rootNamespace": {
		"nestedNamespace": {
			"newServerVariable": "[NYT: rootNamespace.nestedNamespace.newServerVariable]"
		}
	}
}
"
`;

exports[`intl-watcher plugin > namespaced dictionaries > single language > custom partitioning function names 4`] = `
"[37m[1m○[22m[39m Scanning...
[33m[1m⚠[22m[39m Unused i18n key \`unusedRootNamespace.unusedNestedNamespace.unusedNestedVariable\`
[33m[1m⚠[22m[39m Unused i18n key \`unusedRootNamespace.unusedRootVariable\`
[33m[1m⚠[22m[39m Unused i18n key \`unusedVariable\`
[34m[1m✓[22m[39m Added new i18n key \`rootNamespace.nestedNamespace.newClientVariable\`
[34m[1m✓[22m[39m Added new i18n key \`rootNamespace.nestedNamespace.newServerVariable\`
[34m[1m✓[22m[39m Finished in <timing>"
`;

exports[`intl-watcher plugin > namespaced dictionaries > single language > default options 1`] = `
"{
	"rootNamespace": {
		"nestedNamespace": {
			"newClientVariable": "[NYT: rootNamespace.nestedNamespace.newClientVariable]",
			"newServerVariable": "[NYT: rootNamespace.nestedNamespace.newServerVariable]"
		}
	},
	"unusedRootNamespace": {
		"unusedNestedNamespace": {
			"unusedNestedVariable": ""
		},
		"unusedRootVariable": ""
	},
	"unusedVariable": "No longer referenced in any source file"
}
"
`;

exports[`intl-watcher plugin > namespaced dictionaries > single language > default options 2`] = `
"[37m[1m○[22m[39m Scanning...
[33m[1m⚠[22m[39m Unused i18n key \`unusedRootNamespace.unusedNestedNamespace.unusedNestedVariable\`
[33m[1m⚠[22m[39m Unused i18n key \`unusedRootNamespace.unusedRootVariable\`
[33m[1m⚠[22m[39m Unused i18n key \`unusedVariable\`
[34m[1m✓[22m[39m Added new i18n key \`rootNamespace.nestedNamespace.newClientVariable\`
[34m[1m✓[22m[39m Added new i18n key \`rootNamespace.nestedNamespace.newServerVariable\`
[34m[1m✓[22m[39m Finished in <timing>"
`;

exports[`intl-watcher plugin > namespaced dictionaries > single language > dictionary partitioning 1`] = `
"{
	"rootNamespace": {
		"nestedNamespace": {
			"newClientVariable": "[NYT: rootNamespace.nestedNamespace.newClientVariable]",
			"newServerVariable": "[NYT: rootNamespace.nestedNamespace.newServerVariable]"
		}
	},
	"unusedRootNamespace": {
		"unusedNestedNamespace": {
			"unusedNestedVariable": ""
		},
		"unusedRootVariable": ""
	},
	"unusedVariable": "No longer referenced in any source file"
}
"
`;

exports[`intl-watcher plugin > namespaced dictionaries > single language > dictionary partitioning 2`] = `
"{
	"rootNamespace": {
		"nestedNamespace": {
			"newClientVariable": "[NYT: rootNamespace.nestedNamespace.newClientVariable]"
		}
	}
}
"
`;

exports[`intl-watcher plugin > namespaced dictionaries > single language > dictionary partitioning 3`] = `
"{
	"rootNamespace": {
		"nestedNamespace": {
			"newServerVariable": "[NYT: rootNamespace.nestedNamespace.newServerVariable]"
		}
	}
}
"
`;

exports[`intl-watcher plugin > namespaced dictionaries > single language > dictionary partitioning 4`] = `
"[37m[1m○[22m[39m Scanning...
[33m[1m⚠[22m[39m Unused i18n key \`unusedRootNamespace.unusedNestedNamespace.unusedNestedVariable\`
[33m[1m⚠[22m[39m Unused i18n key \`unusedRootNamespace.unusedRootVariable\`
[33m[1m⚠[22m[39m Unused i18n key \`unusedVariable\`
[34m[1m✓[22m[39m Added new i18n key \`rootNamespace.nestedNamespace.newClientVariable\`
[34m[1m✓[22m[39m Added new i18n key \`rootNamespace.nestedNamespace.newServerVariable\`
[34m[1m✓[22m[39m Finished in <timing>"
`;

exports[`intl-watcher plugin > namespaced dictionaries > single language > unused key removal 1`] = `
"{
	"rootNamespace": {
		"nestedNamespace": {
			"newClientVariable": "[NYT: rootNamespace.nestedNamespace.newClientVariable]",
			"newServerVariable": "[NYT: rootNamespace.nestedNamespace.newServerVariable]"
		}
	}
}
"
`;

exports[`intl-watcher plugin > namespaced dictionaries > single language > unused key removal 2`] = `
"[37m[1m○[22m[39m Scanning...
[34m[1m✓[22m[39m Removed unused i18n key \`unusedRootNamespace.unusedNestedNamespace.unusedNestedVariable\`
[34m[1m✓[22m[39m Removed unused i18n key \`unusedRootNamespace.unusedRootVariable\`
[34m[1m✓[22m[39m Removed unused i18n key \`unusedVariable\`
[34m[1m✓[22m[39m Added new i18n key \`rootNamespace.nestedNamespace.newClientVariable\`
[34m[1m✓[22m[39m Added new i18n key \`rootNamespace.nestedNamespace.newServerVariable\`
[34m[1m✓[22m[39m Finished in <timing>"
`;

exports[`intl-watcher plugin > regressions > property access expression in template literal 1`] = `
"{
	"applePropertyAccessExpressionInTemplateLiteral": "[NYT: applePropertyAccessExpressionInTemplateLiteral]",
	"applePropertyAccessExpressionInTemplateLiteral2": "[NYT: applePropertyAccessExpressionInTemplateLiteral2]",
	"bananaPropertyAccessExpressionInTemplateLiteral": "[NYT: bananaPropertyAccessExpressionInTemplateLiteral]",
	"bananaPropertyAccessExpressionInTemplateLiteral2": "[NYT: bananaPropertyAccessExpressionInTemplateLiteral2]",
	"orangePropertyAccessExpressionInTemplateLiteral": "[NYT: orangePropertyAccessExpressionInTemplateLiteral]",
	"orangePropertyAccessExpressionInTemplateLiteral2": "[NYT: orangePropertyAccessExpressionInTemplateLiteral2]",
	"unusedRootNamespace": {
		"unusedNestedNamespace": {
			"unusedNestedVariable": ""
		},
		"unusedRootVariable": ""
	},
	"unusedVariable": "No longer referenced in any source file"
}
"
`;

exports[`intl-watcher plugin > regressions > property access expression in template literal 2`] = `
"[37m[1m○[22m[39m Scanning...
[33m[1m⚠[22m[39m Unused i18n key \`unusedRootNamespace.unusedNestedNamespace.unusedNestedVariable\`
[33m[1m⚠[22m[39m Unused i18n key \`unusedRootNamespace.unusedRootVariable\`
[33m[1m⚠[22m[39m Unused i18n key \`unusedVariable\`
[34m[1m✓[22m[39m Added new i18n key \`applePropertyAccessExpressionInTemplateLiteral\`
[34m[1m✓[22m[39m Added new i18n key \`applePropertyAccessExpressionInTemplateLiteral2\`
[34m[1m✓[22m[39m Added new i18n key \`bananaPropertyAccessExpressionInTemplateLiteral\`
[34m[1m✓[22m[39m Added new i18n key \`bananaPropertyAccessExpressionInTemplateLiteral2\`
[34m[1m✓[22m[39m Added new i18n key \`orangePropertyAccessExpressionInTemplateLiteral\`
[34m[1m✓[22m[39m Added new i18n key \`orangePropertyAccessExpressionInTemplateLiteral2\`
[34m[1m✓[22m[39m Finished in <timing>"
`;
